tests/models/enum/unnamed/i64/pass/lt.rs
use dade::model;
#[model]
enum TestModel {
    Value(
       #[field(lt = 2)]
        i64
    ),
}
fn main() {}
