tests/models/enum/unnamed/i64/fail/max_items.rs
use dade::model;
#[model]
enum TestModel {
    Value(
       #[field(max_items = 2)]
        i64
    ),
}
fn main() {}
